--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Deploy Lambda function
         run: |
           zip -r lambda.zip lambda_function.py
-          aws lambda update-function-code --function-name YourLambdaFunctionName --zip-file fileb://lambda.zip
+          aws lambda update-function-code --function-name myLamdafunction --zip-file fileb://lambda.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
