--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,7 +23,9 @@ jobs:
         run: |
           zip -r lambda.zip lambda_function.py
           aws lambda update-function-code --function-name myLamdafunction --zip-file fileb://lambda.zip
+          aws lambda add-permission --function-name myLamdafunction --principal s3.amazonaws.com --statement-id S3Invoke --action "lambda:InvokeFunction" --source-arn arn:aws:s3:::bucket1 --source-account YOUR_AWS_ACCOUNT_ID
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
+          YOUR_AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
