--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,11 @@
-name: Deploy Lambda Function
+name: Deploy Lambda Function and Upload  images to s3 bucket
 
 on:
   workflow_dispatch:
+  push:
+    # Trigger the workflow for every commit to any branch
+    branches:
+      - '*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -26,3 +30,13 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ap-south-1
+      - name: Upload images to s3 bucket
+        uses: jakejarvis/s3-sync-action@master
+        with:
+         args: --acl public-read --follow-symlinks --delete
+        env:
+         AWS_S3_BUCKET: mybucket19961
+         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+         AWS_REGION: 'ap-south-1'
+         SOURCE_DIR: 'images' 
