--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Upload images to s3 bucket
         uses: jakejarvis/s3-sync-action@master
         with:
-         args: --acl public-read --follow-symlinks --delete
+         args: --delete
         env:
          AWS_S3_BUCKET: mybucket19961
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
