--- a/.github/workflows/deploy_lambda.yml
+++ b/.github/workflows/deploy_lambda.yml
@@ -16,6 +16,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+      - name: Upload images to s3 bucket
+        uses: jakejarvis/s3-sync-action@master
+        with:
+         args: --delete
+        env:
+         AWS_S3_BUCKET: mybucket19961
+         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+         AWS_REGION: 'ap-south-1'
+         SOURCE_DIR: 'images'    
 
       - name: Install AWS CLI
         run: |
